resolvendo o align left and right

--- a/style.css
+++ b/style.css
@@ -8,11 +8,7 @@ body {
   background-color: rgb(66, 103, 178);
   display: flex;
   height: 70px;
-  justify-content: space-around;
-}
-
-.facebook-logo {
-  float: left;
+  justify-content: space-between;
 }
 
 .facebook-login {
